examples/test/testpolicy14590.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14590
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key35: value41
      key45: value37
      key39: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value31
      podSelector:
        matchLabels:
          key25: value3
          key33: value22
          key38: value32
